<resources>

    <string name="app_name">TrailHeads</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_trailheads">TrailHeads</string>
    <string name="navigate">Navigate!</string>
	<string name="menuSettings">Settings</string>
	<string name="menu_about">About</string>
	<string name="menu_addmap">Add Map</string>
	<string name="pref_location">Location Settings</string>
	<string name="pref_state">State Settings</string>
	<string name="name">Enter the Trail Name</string>
	<string name="coords">Use current location?</string>
	<string name="enterCoords">Enter current location</string>
	<string name="length">Enter the length of the trail in miles</string>
	<string name="description">Enter a description or summation of the trail</string>
	<string name="facilities">What available facilities are there at this trail?</string>
	<string name="star1">Star 1</string>
	<string name="star2">Star 2</string>
	<string name="star3">Star 3</string>
	<string name="difficultyString">Difficulty:  </string>
	<string name="permitString">Permit Required:  </string>
</resources>