<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:gravity="center" >

    <EditText
        android:id="@+id/editText1"
        android:hint="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>
    <CheckBox 
        android:id="@+id/currentLocation"
        android:hint="@string/coords"
        android:layout_below="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <EditText
        android:id="@+id/editText2"
        android:hint="@string/length"
        android:layout_below="@+id/currentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>
       <EditText
        android:id="@+id/editText3"
        android:hint="@string/description"
        android:layout_below="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText> 
        <EditText
        android:id="@+id/editText4"
        android:hint="@string/facilities"
        android:layout_below="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
</RelativeLayout>