<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical" >
<ScrollView 
    android:id="@+id/scroll" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:scrollbars="none">
<TableLayout 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:scrollbars="vertical"
	android:isScrollContainer="true"
	android:scrollbarAlwaysDrawVerticalTrack="true">   
 <TableRow>

     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="30dp" />
 </TableRow>
 <TableRow>
    <TextView
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_width="fill_parent"
		android:layout_height="2dip"
		android:background="#AAAAAA" />
</TableRow>
 <TableRow>
     <TextView
         android:id="@+id/distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 </TableRow>
    <LinearLayout
        android:layout_width="60dp"
        android:gravity="left" >
		<TextView 
		    android:id="@+id/difficulty"
		    android:text="@string/difficultyString"
		    android:layout_width="60dp"
	        android:layout_height="wrap_content"
	    />
        <ImageView
            android:contentDescription="@string/star1"
            android:id="@+id/imageView1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="left"
            android:scaleType="fitStart" />

        <ImageView
            android:contentDescription="@string/star2"
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="left"
            android:scaleType="fitStart" />

        <ImageView
            android:contentDescription="@string/star3"
            android:id="@+id/imageView3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="left"
            android:scaleType="fitStart" />

        </LinearLayout>
  	<TableRow>
    		<TextView
    	    android:id="@+id/permitString"
    	    android:text="@string/permitString"
    	    android:layout_gravity="left"
    	    android:layout_width="60dp"
    	    android:layout_height="fill_parent"
    	    />
</TableRow>
   	<TableRow>
    <TextView
        android:layout_marginTop="3dp"
        android:layout_width="fill_parent"
		android:layout_height="2dip"
		android:background="#AAAAAA" />
</TableRow>
<TableRow>
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</TableRow>

<TableRow>
    <TextView
        android:id="@+id/facilities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</TableRow>

<TableRow>
    <TextView
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</TableRow>
<TableRow>
    <TextView
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_width="fill_parent"
		android:layout_height="2dip"
		android:background="#AAAAAA" />
</TableRow>
<TableRow>
    <Button
        android:id="@+id/navigate"
        android:text="@string/navigate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</TableRow>
</TableLayout>
</ScrollView>
</RelativeLayout>
